--- a/app/src/main/res/layout/compose_fragment.xml
+++ b/app/src/main/res/layout/compose_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -54,7 +55,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/profile_image"
                 android:layout_toStartOf="@+id/profile_image"
-                android:textSize="10dp" />
+                android:textSize="10dp"
+                android:layout_marginRight="3dp" />
 
             <TextView
                 android:text="TextView"
@@ -64,7 +66,8 @@
                 android:layout_below="@+id/preferred_name"
                 android:layout_toLeftOf="@+id/profile_image"
                 android:layout_toStartOf="@+id/profile_image"
-                android:textSize="10dp" />
+                android:textSize="10dp"
+                android:layout_marginRight="3dp" />
         </RelativeLayout>
 
     </RelativeLayout>
@@ -112,6 +115,16 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             android:id="@+id/tweet_button" />
+
+        <TextView
+            android:text="140"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_count"
+            tools:text="140"
+            android:textSize="12dp"
+            android:layout_toLeftOf="@+id/tweet_button"
+            android:layout_marginRight="40dp" />
     </RelativeLayout>
 
 </RelativeLayout>
